feat: add Social Auth REST APIs
